2022-09-03 18:50  Arno Onken  <asnelt@asnelt.org>

	* rrep.info, rrep.texi, NEWS: Corrected GFDL license text.

2022-08-27 15:43  Arno Onken  <asnelt@asnelt.org>

	* rrep.texi: Fixed character omission.

2022-08-20 23:02  Arno Onken  <asnelt@asnelt.org>

	* Makefile.in: Updated file for reordered libraries.

2022-08-20 21:34  Arno Onken  <asnelt@asnelt.org>

	* bufferio.c, messages.c, pattern.c, pattern.h, rrep.c: Replaced
	  tabs with spaces.

2019-08-18 12:10  Arno Onken  <asnelt@asnelt.org>

	* Makefile.am: Reordered LDADD libraries to make the compiler aware
	  of the needed libacl references.
	* rrep.in.1: Removed obsolete man macro and fixed spelling mistake.

2013-03-19 20:14  Arno Onken  <asnelt@asnelt.org>

	* lib: Updated GNU Gnulib modules.
	* rrep.c: Changed inline to static inline functions.

2013-03-18 17:53  Arno Onken  <asnelt@asnelt.org>

	* build-aux: Update all files in directory.

2013-03-16 21:48  Arno Onken  <asnelt@asnelt.org>

	* rrep.c, pattern.c: Silence compiler warnings.

2013-03-05 22:47  Arno Onken  <asnelt@asnelt.org>

	* lib: Replaced obsolete GNU Gnulib module strdup with
	  strdup-posix.

2013-02-26 10:57  Arno Onken  <asnelt@asnelt.org>

	* rrep.in.1, rrep.texi: Reformatted documentation.
	* lib: Updated GNU Gnulib modules.

2011-07-31 19:39  Arno Onken  <asnelt@asnelt.org>

	* rrep.in.1: Bugfix for man-page.

2011-07-24 17:08  Arno Onken  <asnelt@asnelt.org>

	* rrep.c, messages.c: Add options for --suffix and --backup with
	  argument.

2011-07-06 18:17  Arno Onken  <asnelt@asnelt.org>

	* rrep.c: Make use of exclude.

2011-07-04 00:46  Arno Onken  <asnelt@asnelt.org>

	* bufferio.c: Add stdbool.
	* messages.c: Add stdbool, progname, propername and yesno.
	* messages.h: Make use of bool.
	* pattern.c: Add stdbool.
	* rrep.c: Add progname, backupfile, copy-file and getopt. Make use
	  of getopt_long
	* rrep.h: Remove boolean constants.
	* lib: Add GNU Gnulib modules.

2011-05-31 13:30  Arno Onken  <asnelt@asnelt.org>
