@@ -1,3 +1,8 @@
+2022-09-04 15:09  Arno Onken  <asnelt@asnelt.org>
+
+	* README, bufferio.c, bufferio.h, messages.c, messages.h,
+	  pattern.c, pattern.h, rrep.c: Improved comment formatting.
+
 2022-09-03 18:50  Arno Onken  <asnelt@asnelt.org>
 
 	* rrep.info, rrep.texi, NEWS: Corrected GFDL license text.
